openshift/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: quay.io/srntp/project-ms-server:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 8000
  selector:
    app: server
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
spec:
  path: /api
  to:
    kind: Service
    name: server
  tls:
    termination: edge
